[package]
name = "movedogs"
authors = ["c0wjay <poppinjaewoo@gmail.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "CLI Documentation application for move language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
async-trait = "0.1.53"
anyhow = "1.0.52"
clap = { version = "3.1.8", features = ["derive"] }
futures-channel = "= 0.3.24"
reqwest = { version = "0.11.1", features = ["blocking", "json", "multipart"] }
serde_json = "1.0.93"
toml = "0.7.2"
tokio = { version = "1.21.0", features = ["full"] }
aptos = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-cli-v1.0.5"}
aptos-runtimes = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-cli-v1.0.5"}
aptos-framework = { git = "https://github.com/aptos-labs/aptos-core", tag = "aptos-cli-v1.0.5"}